--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- =====task-01======= -->
 
-<!-- <ul id="categories">
+<ul id="categories">
     <li class="item">
         <h2>Животные</h2>
     
@@ -43,7 +43,7 @@
         </ul>
     </li>
     </ul>
--->
+
 <!-- =====task-02======= -->
 
 <!-- <ul id="ingredients"></ul> -->
@@ -67,13 +67,20 @@
 
 <!-- =====task-06======= -->
 
-<input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов"/>
+<!-- <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов"/> -->
 
-<!-- <script src="./task-01.js" type="module"></script> -->
+<!-- =====task-07======= -->
+ 
+<!-- <input id="font-size-control" type="range" />
+<br />
+<span id="text">Абракадабра!</span> -->
+
+<script src="./task-01.js" type="module"></script>
 <!-- <script src="./task-02.js" type="module"></script> -->
 <!-- <script src="./task-03.js" type="module"></script> -->
 <!-- <script src="./task-04.js" type="module"></script> -->
 <!-- <script src="./task-05.js" type="module"></script> -->
-<script src="./task-06.js" type="module"></script>
+<!-- <script src="./task-06.js" type="module"></script> -->
+<!-- <script src="./task-07.js" type="module"></script> -->
 </body>
 </html>
